--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<!-- En app.component.html -->
-<app-credit-card></app-credit-card>
+<div class="layout">
+    <!-- En app.component.html -->
+    <app-navbar ></app-navbar>
+    <!-- <app-credit-card></app-credit-card> -->
+    <router-outlet></router-outlet>
+    <app-modal ></app-modal>
+</div>
