--- a/src/app/components/credit-card-form/credit-card-form.component.html
+++ b/src/app/components/credit-card-form/credit-card-form.component.html
@@ -1,4 +1,4 @@
-<div class="col-lg-6">
+
     <div class="card">
         <div class="card-body">
             <h5 class="title">
@@ -11,6 +11,7 @@
                                 [class.red-icon]="this.form.get('holder')?.invalid && this.form.get('holder')?.touched"
                             ></i>
                         </span>
+                            <span class="red-icon"></span>
                         <input formControlName="holder" type="text" class="form-control" placeholder="Titular" aria-label="Username"
                             aria-describedby="basic-addon1">
                     </div>
@@ -46,7 +47,7 @@
                                         [class.red-icon]="this.form.get('cvv')?.invalid && this.form.get('cvv')?.touched"
                                     ></i>
                                 </span>
-                                <input formControlName="cvv" maxlength="3" type="password" class="form-control" placeholder="CVV"
+                                <input formControlName="cvv" class="form-control" maxlength="3" type="password" placeholder="CVV"
                                     aria-label="Username" aria-describedby="basic-addon1">
                             </div>
                         </div>
@@ -61,5 +62,3 @@
             </h5>
         </div>
     </div>
-    <!-- {{info | json}} -->
-</div>
