--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Lusitana:wght@400;700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300;400;500;600;700&family=Roboto:wght@400;700&display=swap');
+
 body {
-    background: #8E0E00;
+    background: #ADA996;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #1F1C18, #8E0E00);
+    background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #1F1C18, #8E0E00);
+    background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    font-family: "Lusitana", serif;
+
+    box-sizing: border-box;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 .title {
-    font-family: "Potta One", cursive;
+    font-family: "Lusitana", serif;
+    font-weight: 700;
     text-align: center;
 }
-  
