modal settings by service working

--- a/src/app/components/credit-card-list/credit-card-list.component.html
+++ b/src/app/components/credit-card-list/credit-card-list.component.html
@@ -9,6 +9,7 @@
                 <tr>
                     <td>{{card.holder}}</td>
                     <td>{{card.cardNumber}}</td>
+                    <td>{{card.dueDate}}</td>
                     <td>{{card.cvv}}</td>
                     <td>
                         <i (click)="editCard(card)" class="far fa-regular fa-pen-to-square text-info"></i>
