--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,11 +12,11 @@
                 <a class="navbar__nav__links__item__link" routerLink="/addcard">Agregar</a>
             </li>
         </ul>
-        <div class="navbar__nav__user-settings">
+        <div class="navbar__nav__user-settings" (click)="onSettingsClick()">
             settings
         </div>
         <div class="navbar__nav__menu" >
-            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars" ></i>
         </div>
     </div>
 </nav>
