--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,7 +1,7 @@
-<div class="modal" [hidden]="true">
+<div class="modal" [hidden]="!isOpen">
     <div class="modal-box">
         <h2>Proximamente</h2>
-        <i class="fa-solid fa-circle-xmark button-close"></i>
+        <i class="fa-solid fa-circle-xmark button-close" (click)="onCloseClick()"></i>
     </div>
 </div>
 
