card image returned

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home">
     <div>
-        <img class="card" src="assets/imgs/card-home.png" alt="Descripción de la imagen">
+        <img class="card" src="assets/imgs/credit-home.png" alt="Tarjeta y Hogar">
     </div>
     
     <div class="home__left">
